# sync-claude-md

./: .dprint.jsonc  .editorconfig  .gitignore  .golangci.yaml  .goreleaser.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.ko.md  README.md  go.mod  mise.toml  package.json  pyproject.toml  release-please-config.json
.github/: AGENTS.md  CODEOWNERS  renovate.json5
.github/actions/copy-readme/: action.yml
.github/actions/init-tools/: action.yaml
.github/workflows/: ci.yaml  pr-title.yaml  release-please.yaml  release.yaml  renovate.yaml
.mise/tasks/: postinstall.sh  unpublish-npm.sh
cmd/sync-claude-md/: AGENTS.md  cli_test.go  main.go  main_test.go  testhelpers_test.go
docs/: husky.md
internal/sync/: AGENTS.md  constants.go  discover.go  discover_test.go  gitstate.go  gitstate_test.go  mutate.go  mutate_test.go  precommit.go  precommit_test.go  sync.go  sync_test.go  targets.go  targets_test.go
npm/sync-claude-md/: package.json
npm/sync-claude-md-darwin-arm64/: package.json
npm/sync-claude-md-darwin-x64/: README.md  package.json
npm/sync-claude-md-linux-arm64/: package.json
npm/sync-claude-md-linux-x64/: README.md  package.json
npm/sync-claude-md-win32-arm64/: README.md  package.json
npm/sync-claude-md-win32-x64/: package.json
npm/sync-claude-md-windows-arm64/: package.json
npm/sync-claude-md-windows-x64/: README.md  package.json
pypi/: .gitignore  hatch_build.py  pyproject.toml
(+8 files in other folders)
